--- a/app/src/main/res/layout/activity_main_old.xml
+++ b/app/src/main/res/layout/activity_main_old.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:onClick="readPlan"
+        android:onClick="loadPlanFromFile"
         android:text="@string/button_read_plan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
