--- a/app/src/main/res/layout/drives_row.xml
+++ b/app/src/main/res/layout/drives_row.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/driveName"
+            android:id="@+id/senseName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
@@ -22,7 +22,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/driveNotes"
+            android:id="@+id/senseValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
